--- a/cv.html
+++ b/cv.html
@@ -13,7 +13,7 @@
                 <div>
                     <h1>Filip Skup</h1>
                     <div>
-                        <a class="cv-dowland-link" href="https://drive.google.com/u/0/uc?id=1KOu8h_bjvZg9d99l7T6qo3yb5G8OAljw&export=download">Pobierz CV</a>
+                        <a class="cv-dowland-link" href="https://github.com/Filip0221/CV/blob/main/Filip%20Skup%20-%20CV.pdf?raw=true">Pobierz CV</a>
                     </div>
                     <div>
                         <a class="cv-dowland-link" href="https://github.com/Filip0221/">github</a>
