--- a/cv.html
+++ b/cv.html
@@ -67,7 +67,7 @@
                     <h2>Umiejętności</h2>
                     <ul>
                         <li>Tworzenie prostych stron internetowych HTML i CSS</li>
-                        <li>Tworzenie aplikacji przy urzyciu Xcode, Swift i SwiftUI</li>
+                        <li>Tworzenie aplikacji przy użyciu Xcode, Swift i SwiftUI</li>
                         <li>Pisanie obiektowe C++, Python i Java</li>
                         <li>Podstawy baz danych Oracle SQL</li>
                         <li>Obsługa GitHub i Git</li>
